# src/qa-test/qa-test.router.ts
@@ -1,7 +1,40 @@
 import { Router } from "express";
+import Joi from "joi";
 import tryCatchWrapper from "../helpers/function-helpers/try-catch-wrapper";
+import validate from "../helpers/function-helpers/validate";
 import { authorize } from "./../auth/auth.controller";
-import { loadTechTest, loadTheoryTest } from "./qa-test.controller";
+import {
+  loadTechTest,
+  loadTheoryTest,
+  techResults,
+  theoryResults,
+} from "./qa-test.controller";
+
+const getTechResultSchema = Joi.object({
+  answers: Joi.array()
+    .min(12)
+    .max(12)
+    .items(
+      Joi.object({
+        questionId: Joi.number().min(1).max(26).required(),
+        answer: Joi.string().required(),
+      })
+    )
+    .required(),
+});
+
+const getTheoryResultSchema = Joi.object({
+  answers: Joi.array()
+    .min(12)
+    .max(12)
+    .items(
+      Joi.object({
+        questionId: Joi.number().min(1).max(31).required(),
+        answer: Joi.string().required(),
+      })
+    )
+    .required(),
+});
 
 const router = Router();
 
@@ -10,6 +43,18 @@ router.get(
   "/theory",
   tryCatchWrapper(authorize),
   tryCatchWrapper(loadTheoryTest)
+);
+router.post(
+  "/tech-results",
+  tryCatchWrapper(authorize),
+  validate(getTechResultSchema),
+  tryCatchWrapper(techResults)
+);
+router.post(
+  "/theory-results",
+  tryCatchWrapper(authorize),
+  validate(getTheoryResultSchema),
+  tryCatchWrapper(theoryResults)
 );
 
 export default router;
