# swagger.json
@@ -205,8 +205,8 @@
             "description": "Bad request (no token provided)",
             "content": {}
           },
-          "409": {
-            "description": "Provided email already exists",
+          "401": {
+            "description": "Unauthorized (invalid access token)",
             "content": {}
           }
         }
@@ -233,8 +233,82 @@
             "description": "Bad request (no token provided)",
             "content": {}
           },
-          "409": {
-            "description": "Provided email already exists",
+          "401": {
+            "description": "Unauthorized (invalid access token)",
+            "content": {}
+          }
+        }
+      }
+    },
+    "/qa-test/tech-results": {
+      "post": {
+        "tags": ["QA-test"],
+        "summary": "Get QA tech test results",
+        "parameters": [],
+        "security": [{ "Bearer": [] }],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/GetTechResults"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TestResult"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request (invalid request body / no token provided)",
+            "content": {}
+          },
+          "401": {
+            "description": "Unauthorized (invalid access token)",
+            "content": {}
+          }
+        }
+      }
+    },
+    "/qa-test/theory-results": {
+      "post": {
+        "tags": ["QA-test"],
+        "summary": "Get QA theory test results",
+        "parameters": [],
+        "security": [{ "Bearer": [] }],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/GetTheoryResults"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TestResult"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request (invalid request body / no token provided)",
+            "content": {}
+          },
+          "401": {
+            "description": "Unauthorized (invalid access token)",
             "content": {}
           }
         }
@@ -679,6 +753,162 @@
             ]
           }
         ]
+      },
+      "GetTechResults": {
+        "type": "object",
+        "properties": {
+          "answers": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "questionId": {
+                  "type": "integer",
+                  "description": "Question's id"
+                },
+                "answer": {
+                  "type": "string",
+                  "description": "Answer to the question"
+                }
+              }
+            }
+          }
+        },
+        "example": {
+          "answers": [
+            {
+              "questionId": 25,
+              "answer": "Interface testing"
+            },
+            {
+              "questionId": 22,
+              "answer": "Currency testing"
+            },
+            {
+              "questionId": 19,
+              "answer": "All options are correct"
+            },
+            {
+              "questionId": 17,
+              "answer": "Software testing life cycle"
+            },
+            {
+              "questionId": 21,
+              "answer": "Test case"
+            },
+            {
+              "questionId": 14,
+              "answer": "Verification of software, according to the test plan, test procedures and relevant documentation, taking into account the wishes of the client"
+            },
+            {
+              "questionId": 13,
+              "answer": "This is testing by executing a code or program with different input values and confirming the results"
+            },
+            {
+              "questionId": 10,
+              "answer": "All options are correct"
+            },
+            {
+              "questionId": 6,
+              "answer": "eXtreme Programming"
+            },
+            {
+              "questionId": 5,
+              "answer": "Canban"
+            },
+            {
+              "questionId": 3,
+              "answer": "All options are correct"
+            },
+            {
+              "questionId": 2,
+              "answer": "All options are incorrect"
+            }
+          ]
+        }
+      },
+      "GetTheoryResults": {
+        "type": "object",
+        "properties": {
+          "answers": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "questionId": {
+                  "type": "integer",
+                  "description": "Question's id"
+                },
+                "answer": {
+                  "type": "string",
+                  "description": "Answer to the question"
+                }
+              }
+            }
+          }
+        },
+        "example": {
+          "answers": [
+            {
+              "questionId": 25,
+              "answer": "1: 6: 10: 1000"
+            },
+            {
+              "questionId": 22,
+              "answer": "Data stream"
+            },
+            {
+              "questionId": 19,
+              "answer": "Test cases should be reviewed and revised regularly"
+            },
+            {
+              "questionId": 17,
+              "answer": "When we press the submit button"
+            },
+            {
+              "questionId": 21,
+              "answer": "Causes and effects of coverage"
+            },
+            {
+              "questionId": 14,
+              "answer": "Hidden defect"
+            },
+            {
+              "questionId": 13,
+              "answer": "Vulnerability testing"
+            },
+            {
+              "questionId": 27,
+              "answer": "V model"
+            },
+            {
+              "questionId": 29,
+              "answer": "All options are incorrent"
+            },
+            {
+              "questionId": 30,
+              "answer": "Gorilla Testing"
+            },
+            {
+              "questionId": 3,
+              "answer": "All options are correct"
+            },
+            {
+              "questionId": 2,
+              "answer": "Requirements Management - Product Analysis - Developing a Test Strategy and Planning Quality Control Procedures - Prototype Testing - Generating Test Documentation - Basic Testing - Stabilization - Operation"
+            }
+          ]
+        }
+      },
+      "TestResult": {
+        "type": "object",
+        "properties": {
+          "result": {
+            "type": "string",
+            "description": "Test's result",
+            "example": "91%"
+          }
+        }
       }
     },
     "securitySchemes": {
